// Protofile which describes service methods and message types.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";
option objc_class_prefix = "RTG";

package routeguide;

// Interface exported by the server.
service RouteGuide {
  // Get the landmark name for a given geospatial reference point.
  rpc GetFeature(Point) returns (Feature) {}

  // Invoke server-side streaming
  rpc ListFeatures(Rectangle) returns (stream Feature) {}

  // Invoke client-side streaming
  rpc RecordRoute(stream Point) returns (RouteSummary) {}

  // Invoke bi-directional streaming
  rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}
}

message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}

message Rectangle {
  // Diagonal corner that faces opposite of the other.
  Point lo = 1;

  // The other corner.
  Point hi = 2;
}

message Feature {
  // The name of the landmark.
  string name = 1;

  // The point where the landmark is located.
  Point location = 2;
}

// A RouteNote is a message sent while at a given point.
message RouteNote {
  // The location from which the message is sent.
  Point location = 1;

  // The message to be sent.
  string message = 2;
}

// A summarized report of the information.
message RouteSummary {
  // The number of points received.
  int32 point_count = 1;

  // The number of known landmarks passed while traversing the route.
  int32 feature_count = 2;

  // The distance covered in metres.
  int32 distance = 3;

  // The duration of the traversal in seconds.
  int32 elapsed_time = 4;
}
